# thankyouai-python-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: generate_model_types.mjs
tests/: test_sdk.py
tests/typing/: typecheck.py
thankyou/: __init__.py  __init__.pyi  _client.py  _utils.py  errors.py
thankyou/resources/: __init__.py  files.py  models.py  webhooks.py
thankyou/resources/generations/: __init__.py  __init__.pyi  generated.py  inputs.py  outputs.py  responses.py
thankyou/types/: __init__.py  files.py  generations.py  models.py  webhooks.py
