[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "thankyouai"
version = "0.1.0"
description = "Official Python SDK for the ThankYou unified creative generation API."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "ThankYou AI" }]
keywords = [
  "thankyou",
  "thankyouai",
  "sdk",
  "python",
  "ai",
  "image-generation",
  "video-generation",
  "audio-generation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://thankyouai.com/developer"
Repository = "https://github.com/39-ai/thankyou-python-sdk"
Issues = "https://github.com/39-ai/thankyou-python-sdk/issues"

[project.optional-dependencies]
dev = [
    "build>=1.3.0",
    "mypy>=1.19.0",
    "pytest>=9.0.0",
    "ruff>=0.14.0",
    "pyright>=1.1.410",
]

[tool.hatch.build.targets.wheel]
packages = ["thankyou"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "thankyou/**/*.pyi",
  "thankyou/resources/generations/generated.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["thankyou", "tests/typing"]

[tool.pyright]
reportInvalidTypeVarUse = "none"
